Towards release v1.9 on Play. Fixed Drag inconsistency, fixing Long-press inconsitency too. Fixed minor warnings revealedby ADT20.